<!--
  ~ Copyright 2022 Vast Gui guihy2019@gmail.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="about">关于</string>
    <string name="albumPicture">专辑图片</string>
    <string name="app_name">Vmusic</string>
    <string name="app_version">应用版本%1$s</string>
    <string name="author">作者</string>
    <string name="author_name">Vast Gui</string>
    <string name="background">背景图</string>
    <string name="captcha">验证码</string>
    <string name="cor_info_captcha">请查看验证码</string>
    <string name="defaultText">开始</string>
    <string name="err_info_download">下载失败</string>
    <string name="err_info_download_path">下载路径获取错误</string>
    <string name="err_info_download_info">下载信息获取错误</string>
    <string name="err_info_get_captcha">验证码获取失败</string>
    <string name="err_info_phone">电话号码输入错误</string>
    <string name="exit">退出</string>
    <string name="finished">完成</string>
    <string name="follow_csdn">查看他的 CSDN 博客</string>
    <string name="follow_github">在 Github 上关注</string>
    <string name="follow_twitter">在 Twitter 上跟随</string>
    <string name="format_duration">%1$s/%2$s</string>
    <string name="format_userid">用户ID:%1$s</string>
    <string name="init_fragment">初始化登录页面</string>
    <string name="last_button">上一首按钮</string>
    <string name="loading">正在加载中</string>
    <string name="login">登录</string>
    <string name="login_code_fragment">二维码登录页面</string>
    <string name="login_fragment">登录界面</string>
    <string name="look_github">在github上查看</string>
    <string name="look_license">查看许可</string>
    <string name="main_bottom_bar_home">主页</string>
    <string name="main_bottom_bar_local_download">下载</string>
    <string name="main_bottom_home">主页</string>
    <string name="main_bottom_setting">设置</string>
    <string name="main_toolbar_home">主页</string>
    <string name="main_toolbar_search">搜索</string>
    <string name="main_toolbar_setting">设置</string>
    <string name="musicPlayDuration">歌曲播放进度</string>
    <string name="next_button">下一首按钮</string>
    <string name="play_button">播放键</string>
    <string name="register">注册</string>
    <string name="register_fragment">注册界面</string>
    <string name="setting">设置</string>
    <string name="startPagePicture">起始页面图片</string>
    <string name="user">用户</string>
    <string name="user_login_out">用户登出</string>
    <string name="user_password">密码</string>
    <string name="user_phone">手机号</string>
    <string name="user_setting_login">用户登录设置</string>
    <string name="welcome">欢迎</string>
    <string name="start_download">开始下载</string>
    <string name="cor_info_download_success">下载成功</string>
    <string name="err_info_get_current_music">当前播放音乐信息获取失败</string>
    <string name="main_bottom_bar_ranking">排行榜</string>
</resources>
