<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Vast Gui guihy2019@gmail.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:textSize="25sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_about"
                android:text="@string/app_version"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appGithub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_github"
                android:text="@string/look_github"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/appLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_license"
                android:text="@string/look_license"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/author"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_author"
                android:text="@string/author_name"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/authorGithub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_github"
                android:text="@string/follow_github"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/authorCSDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_csdn"
                android:text="@string/follow_csdn"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/authorTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_twitter"
                android:text="@string/follow_twitter"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:drawablePadding="30dp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>