<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.gmusic.MusicBean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/sv_bg"
            android:iconifiedByDefault="false"
            android:queryHint="请输入要搜索的歌名"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/local_music_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/control_bg"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/local_music_bottom_tv_albumArt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:contentDescription="@string/albumPicture"
                android:src="@drawable/earphone" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/local_music_bottom_tv_song"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@{item.song}"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights,RelativeOverlap,SmallSp" />

                <TextView
                    android:id="@+id/local_music_bottom_tv_singer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{item.singer}"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/local_music_bottom_iv_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10sp"
                    android:contentDescription="@string/last_button"
                    android:src="@drawable/last" />

                <ImageView
                    android:id="@+id/local_music_bottom_iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10sp"
                    android:contentDescription="@string/play_button"
                    android:src="@drawable/play" />

                <ImageView
                    android:id="@+id/local_music_bottom_iv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5sp"
                    android:contentDescription="@string/next_button"
                    android:src="@drawable/next" />
            </LinearLayout>
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fragment_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/local_music_bottomLayout"
            android:layout_below="@id/searchView"/>
    </RelativeLayout>
</layout>