<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="item"
            type="com.example.gmusic.LocalMusicBean" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:iconifiedByDefault="false"
            android:queryHint="请输入要搜索的歌名"
            android:background="@drawable/search_view_background" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchView"
            android:visibility="gone"
            android:background="@drawable/background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/local_music_bottomLayout"
            android:background="#33EEEEEE"
            android:baselineAligned="false">
            <ImageView
                android:id="@+id/local_music_bottom_tv_albumArt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/earphone"
                android:layout_marginStart="5sp"
                android:contentDescription="@string/albumPicture" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_margin="5sp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/local_music_bottom_tv_song"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@{item.song}"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    tools:ignore="NestedWeights,RelativeOverlap,SmallSp" />
                <TextView
                    android:id="@+id/local_music_bottom_tv_singer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@{item.singer}"
                    android:textSize="12sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/local_music_bottom_iv_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/last"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10sp"
                    android:contentDescription="@string/last_button" />
                <ImageView
                    android:id="@+id/local_music_bottom_iv_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/play"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10sp"
                    android:contentDescription="@string/play_button" />
                <ImageView
                    android:id="@+id/local_music_bottom_iv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/next"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5sp"
                    android:contentDescription="@string/next_button" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/local_music_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/local_music_bottomLayout"
            android:layout_below="@id/searchView" />
    </RelativeLayout>
</layout>