<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/phoneInput"
        app:layout_constraintEnd_toStartOf="@id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintBottom_toBottomOf="@id/appIcon"
        app:layout_constraintStart_toEndOf="@id/appIcon"
        app:layout_constraintTop_toTopOf="@id/appIcon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/user_phone"
        app:hintTextAppearance="?attr/textAppearanceLabelLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIcon"
        app:layout_constraintBottom_toTopOf="@id/captchaInput"
        app:startIconDrawable="@drawable/ic_empty_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/captchaInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/captcha"
        app:hintTextAppearance="?attr/textAppearanceLabelLarge"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/getCaptcha"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        app:layout_constraintBottom_toTopOf="@id/qrcodeLogin"
        app:startIconDrawable="@drawable/ic_empty_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/captchaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getCaptcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captcha"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/captchaInput"
        app:layout_constraintBottom_toBottomOf="@id/captchaInput"
        app:layout_constraintStart_toEndOf="@id/captchaInput"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/qrcodeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_qrcode_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/captchaInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bk_button"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>